# smo-lunakit

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TestFile.byml  compile_commands.json
.github/ISSUE_TEMPLATE/: bug-report.md  documentation-issue.md  feature-request.md
.github/workflows/: cmake.yml
LunaKit/LunaKitData/: CustomWorldList.szs
LunaKit/ObjectData/: CubeMapDevBossCityStage.szs  CubeMapDevBossKnuckleStage.szs  CubeMapDevBossRaidStage.szs  CubeMapDevChromaBlueDayStage.szs  CubeMapDevChromaGreenDayStage.szs  CubeMapDevChromaRedDayStage.szs  CubeMapDevMinibossTopperStage.szs  CubeMapDevTestShapesStage.szs  DevChromaBoxBlue.szs  DevChromaBoxFloorCollision.szs  DevChromaBoxGreen.szs  DevChromaBoxRed.szs  DevGenericCircle.szs  DevGenericCube10U.szs  DevGenericCube8U.szs  DevGenericGrid100.szs  DevGenericGrid50.szs  DevGenericSphere.szs  DevGenericTexture.szs
LunaKit/StageData/: DevBossCityStageDesign.szs  DevBossCityStageMap.szs  DevBossForestStageDesign.szs  DevBossKnuckleStageDesign.szs  DevBossRaidStageMap.szs  DevChromaBlueDayStageDesign.szs  DevChromaBlueDayStageMap.szs  DevChromaGreenDayStageDesign.szs  DevChromaGreenDayStageMap.szs  DevChromaRedDayStageDesign.szs  DevChromaRedDayStageMap.szs  DevMinibossTopperStageMap.szs  DevMinibossTopperStageSound.szs  DevTestShapesStageDesign.szs
cmake/: SwitchTools.cmake  bin2s_header.h.in  toolchain.cmake
devworlds/Models/: BasicEdge.bfmat  GenericCircle.mtl  GenericCube2x.mtl  GenericCylinder.mtl  GenericGrid100x100.mtl  GenericGrid10x10.mtl  GenericGrid50x50.mtl  GenericSphere.mtl
lib/exlaunch/: types.h
module/: subsdk9.json.template  subsdk9.ld  subsdk9.specs.template
romfs/ObjectData/: CubeMapDevBossForestStage.szs  CubeMapDevBossLavaStage.szs  DevGenericCube2U.szs  DevGenericCube4U.szs  DevGenericCube6U.szs  DevGenericCylinder.szs  DevGenericGrid10.szs
romfs/StageData/: DevBossCityStageSound.szs  DevBossForestStageMap.szs  DevBossForestStageSound.szs  DevBossKnuckleStageMap.szs  DevBossLavaStageDesign.szs  DevBossLavaStageMap.szs  DevBossLavaStageSound.szs  DevBossRaidStageDesign.szs  DevBossRaidStageSound.szs  DevMinibossTopperStageDesign.szs  DevTestShapesStageMap.szs
romfs/system/: DevWorldList.szs
scripts/: tcpServer.py
src/: helpers.h  nn.hpp  types.h
src/agl/: DevTools.h  DisplayList.h  TextureData.h  TextureSampler.h  utl.h
src/al/: util.hpp
src/glslc/: glslc.h
src/helpers/: DataStream.h  FunctionHelper.cpp  FunctionHelper.h  GetHelper.cpp  GetHelper.h  ImGuiHelper.cpp  ImGuiHelper.h  InputHelper.cpp  InputHelper.h  PlayerHelper.cpp  PlayerHelper.h  curlHelper.cpp  curlHelper.h  fsHelper.cpp  fsHelper.h  helpers.h
src/imgui_backend/: ImguiShaderCompiler.cpp  ImguiShaderCompiler.h  MemoryBuffer.cpp  MemoryBuffer.h  MemoryPoolMaker.cpp  MemoryPoolMaker.h  imgui_hid_mappings.h  imgui_impl_nvn.cpp  imgui_impl_nvn.hpp  nvn_imgui_config.h
src/lib/: alloc.hpp  hook.hpp
src/logger/: LoadLogger.cpp  LoadLogger.hpp  Logger.cpp  Logger.hpp
src/nn/: crypto.h  diag.h  fs.h  hid.h  init.h  mem.h  nn_common.hpp  oe.h  os.h  os.hpp  pl.h  result.h  ro.h  socket.h  socket.hpp  ssl.h  util.h
src/nvn/: nvn.h  nvn_Cpp.h  nvn_CppFuncPtrBase.h  nvn_CppFuncPtrImpl.h  nvn_CppMethods.h  nvn_FuncPtrBase.h  nvn_FuncPtrImpl.h  nvn_FuncPtrInline.h
src/nvnTool/: nvnTool_GlslcInterface.h
src/program/: ExceptionHandler.cpp  ExceptionHandler.h  ExceptionHandler.s  GetterUtil.cpp  GetterUtil.h  ImGuiUtils.h  NrvFindUtil.cpp  SequenceUtil.cpp  SequenceUtil.h  curl_testing.cpp  curl_testing.h  imgui_nvn.cpp  imgui_nvn.h  main.cpp  patches.cpp  patches.hpp  statics.h  (+2 more)
(+549 files in other folders)
